[package]
name = "dash-spv-models"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte = "0.2"
[dependencies.dash-spv-primitives]
git = "https://github.com/pankcuf/dash-spv-primitives"
branch = "master"
version = "0.1.8"

